cambios en metadatos

--- a/seo.html
+++ b/seo.html
@@ -8,15 +8,15 @@
     <meta name="description" content="Qué es el SEO, por qué es importante, velocidad de carga, SEO técnico, Open Graph y Twitter Cards, con ejemplos y buenas prácticas." />
     <meta name="robots" content="index,follow" />
 
-    <!-- URL canónica de TU página en GitHub Pages -->
+    <!-- URL canónica-->
     <link rel="canonical" href="https://fzamoraa.github.io/primerInvestigacionCorta/" />
 
-    <!-- Open Graph -->
+    <!-- Opengraph -->
     <meta property="og:type" content="article" />
     <meta property="og:title" content="¿Qué es el SEO?" />
     <meta property="og:description" content="SEO, velocidad de carga, SEO técnico e implementación de Open Graph y Twitter Cards." />
     <meta property="og:url" content="https://fzamoraa.github.io/primerInvestigacionCorta/" />
-    <!-- Usa una imagen tuya accesible públicamente -->
+    
     <meta property="og:image" content="https://fzamoraa.github.io/primerInvestigacionCorta/images/SEO.jpg" />
     <meta property="og:image:alt" content="Ilustración sobre qué es SEO" />
     <meta property="og:site_name" content="Investigación SEO – UTN" />
