--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
     <div class="contenido">
         <h2>Menú de Contenidos</h2>
         <ul>
-            <li><a href="seo.html">¿Qué es el SEO?</a></li>
-            <li><a href="usabilidad.html">¿Qué es Usabilidad?</a></li>
-            <li><a href="#dcu">¿Qué es DCU?</a></li>
-            <li><a href="#accesibilidad">¿Qué es la Accesibilidad Web?</a></li>
+            <li><a href="seo.html">SEO (Optimización para Motores de Búsqueda) y Rendimiento</a></li>
+            <li><a href="usabilidad.html">Usabilidad Web y Diseño Centrado en el Usuario (DCU)</a></li>
+            <li><a href="accesibilidad.html">Accesibilidad Web</a></li>
         </ul>
     </div>
 </body>
