--- a/seo.html
+++ b/seo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>¿Qué es el SEO?</title>
+    <title>SEO y rendimiento</title>
     <meta name="description" content="Qué es el SEO, por qué es importante, velocidad de carga, SEO técnico, Open Graph y Twitter Cards, con ejemplos y buenas prácticas." />
     <meta name="robots" content="index,follow" />
 
