--- a/usabilidad.html
+++ b/usabilidad.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Qué Usabilidad?</title>
+    <title>Usabilidad y DCU</title>
 </head>
-<>
+<body>
     <div class="titulo">
         <h1>Usabilidad web y diseño centrado en el usuario (DCU)</h1>
     </div>
