listos los html con sus css

--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesibilidad Web</title>
+    <link rel="stylesheet" href="./css/accesibilidad.css">
 </head>
 <body>
     <div class="titulo">
+        <img src="./images/accesibilidad-logo.png" alt="Logo de Accesibilidad Web" width="100" height="100">
         <h1>Accesibilidad Web</h1>
     </div>
     <nav aria-label="Índice de contenidos">
@@ -20,13 +22,13 @@
             <li><a href="#referencias">Referencias</a></li>
         </ul>
     </nav>
-    aria
+    
     <div class="contenido">
         <div id="que-es-accesibilidad">
-            <img src="./images/accesibilidad-web.webp" alt="accesibilidad web" width="500px" height="300px">
             <p>
                 La <strong>accesibilidad web</strong> se refiere a la práctica de diseñar sitios web que sean utilizables por todas las personas, incluidas aquellas con discapacidades. Esto implica crear contenido que sea fácil de ver, escuchar y navegar, independientemente de las habilidades o limitaciones del usuario.
             </p>
+            <img src="./images/accesibilidad-web.webp" alt="accesibilidad web" width="500px" height="300px">
             <p>La <strong>accesibilidad web</strong> es un aspecto fundamental del diseño inclusivo y debe ser considerada en todas las etapas del desarrollo web. Con una plataforma web accesible, las personas pueden:</p>
             <ul>
                 <li>Leer y comprender el contenido.</li>
@@ -270,9 +272,8 @@
         </li>
     </ul>
     </div>
-
     </div>
-    <footer>
+
         <footer>
             <h2 id="referencias">Referencias</h2>
             <ul>
