--- a/seo.html
+++ b/seo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>SEO y rendimiento</title>
+    <title>SEO y Rendimiento</title>
     <meta name="description" content="Qué es el SEO, por qué es importante, velocidad de carga, SEO técnico, Open Graph y Twitter Cards, con ejemplos y buenas prácticas." />
     <meta name="robots" content="index,follow" />
 
@@ -45,6 +45,7 @@
     "mainEntityOfPage": "https://fzamoraa.github.io/primerInvestigacionCorta/"
     }
     </script>
+    <link rel="stylesheet" href="./css/seo.css" />
 </head>
 
 <body>
